# CDbinAndVocabularyCreation

./: README.md  TemplateExecute.cpp  descriptor.py  loadcdBin.py  loadcdBin_og.py
VocabularyCreation/: CMakeLists.txt  create_voc_beblid.cc  create_voc_cdbin.cc  create_voc_gcn.cc
VocabularyCreation/DBoW2/: CMakeLists.txt
VocabularyCreation/DBoW2/DUtils/: DUtils.h
VocabularyCreation/DBoW2/src/: FORB.cpp
data/video/: 210331_01_Oxford City_4k_050_preview.webm
